refactor: Fixed contents in requirements.txt

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,5 @@
-numpy
-pandas
-babel
-matplotlib
-seaborn
-urllib3
+Babel==2.14.0
+matplotlib==3.8.2
+pandas==2.1.4
+seaborn==0.13.0
+streamlit==1.29.0
